--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GrovePiFlask</title>
+    <title>BrickPiFlask</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style></style>
 </head>
 
 <body style="padding:30px;font-size:16px;">
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
-                <a href="/" class="navbar-brand">GrovePiFlask</a>
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-danger">
+                <a href="/" class="navbar-brand">BrickPiFlask</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse2">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse2">
                     <div class="navbar-nav">
                         <a href="/" class="nav-item nav-link active">Home</a>
-                        <a href="/realtimechart" class="nav-item nav-link">Real Time Chart</a>
+                        <a href="/map" class="nav-item nav-link">Map</a>
                         <a href="/dashboard" class="nav-item nav-link">Dashboard</a>
                     </div>
                 </div>
@@ -26,7 +26,7 @@
 
     {% block content %}{% endblock %} <!-- Container for Content -->
     <footer>
-        <a href="https://github.com/bradnielsen2981/grovepiflask">The full code can be found on Github</a>
+        <a href="https://github.com/bradnielsen2981/brickpiflask">The full code can be found on Github</a>
         {% for message in get_flashed_messages() %}
         <div style="color:red;">
             {{message}}
