revamped template for students

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
-<h2>Sample Web Interface using Bootstrap</h2><br/>
-<p>The buttons when clicked run a special script that can be used to send data to the server without a form (and the necessary page refresh). This helper script uses JSON (a method of sending complex data through text encoding).</p>
-<p>The helper function can be used as follows <b>JSONrequest</b>(/url, "POST",name_of_callback_function, {var1:"value1",var2:"value2"...})</p><p><i>The callback function receives a result object that contains response data.</i></p>
-<h3>Voltage = {{voltage}}</h3>
-{% if data %}
-<table class="table">
-    <tr>{% for key in data[0].keys() %}
-        <th>{{key}}</th>
-    {% endfor %}</tr>
-    {% for row in data %}
-        <tr>{% for column in row %}
-                <td>{{column}}</td>
-            {%endfor%}</tr>
-    {% endfor %}
-    </table>
-{% endif %}
+<h2>Login</h2>
 <div class="container">
-    <div class="row">
-        <h3 id="message"></h3>
-    </div>
-    <div class="row">
-        <button type="button" class="btn btn-success" onclick="JSONrequest('/start','POST')">Start</button>
-    </div>
-    <div class="row">
-        <button type="button" class="btn btn-danger" onclick="JSONrequest('/stop','POST') ">Stop</button>
-    </div>
-    <div class="row">
-        <button type="button" class="btn btn-warning" onclick="JSONrequest('/reset','POST');location.reload(true);">Reset</button>
-    </div>
-    <div class="row">
-        <button type="button" class="btn btn-primary" onclick="JSONrequest('/reverse','POST') ">Reverse</button>
-    </div>
-    <br/><br/>
-    <div class="row">
-        <button type="button" class="btn btn-dark" onclick="JSONrequest('/shutdown','POST')">Shutdown Server</button>
-    </div>
+    <form action="/" method="POST">
+        Email:<br>
+        <input type="email" name="email" value="" required>
+        <br>
+        Password:<br>
+        <input type="password" name="password" value="" required>
+        <br><br>
+        <input type="submit" value="Submit">
+        <p>If you click the "Submit" button, the form-data will be sent to the form action. Default is Email is 'admin@email.com' and Password is 'admin'.</p>
+    </form>
 </div>
 {% endblock %}
 {% block scripts %}
