--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>BrickPiFlask</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <style></style>
+    <link rel="stylesheet" href="../static/custom.css">
 </head>
 
 <body style="padding:30px;font-size:16px;">
@@ -28,7 +28,7 @@
     <footer>
         <a href="https://github.com/bradnielsen2981/brickpiflask">The full code can be found on Github</a>
         {% for message in get_flashed_messages() %}
-        <div style="color:red;">
+        <div class='alert'>
             {{message}}
         </div>
         {%endfor%}
