--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
                     <div class="navbar-nav">
                         <a href="/" class="nav-item nav-link active">Home</a>
                         <a href="/map" class="nav-item nav-link">Map</a>
-                        <a href="/dashboard" class="nav-item nav-link">Dashboard</a>
+                        <a href="/sensorview" class="nav-item nav-link">Sensor View</a>
                     </div>
                 </div>
             </nav>
@@ -34,8 +34,8 @@
         {%endfor%}
     </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <script src="static/jsonrequesthandler.js"></script>
 {% block scripts %}{% endblock %} <!-- Container for Scripts-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </body>
 </html>
