--- a/static/custom.css
+++ b/static/custom.css
@@ -3,3 +3,14 @@ button.btn { width:100%; }
 .alert { color:red; }
 .container { margin-top:30px; margin-bottom:30px; }
 footer { margin-top:60px; }
+
+.blinking{
+    animation:blinkingText 1.2s infinite;
+}
+@keyframes blinkingText{
+    0%{     color: #000;    }
+    49%{    color: #000; }
+    60%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: #000;    }
+}
