--- a/templates/sensorview.html
+++ b/templates/sensorview.html
@@ -3,7 +3,7 @@
 <h2>Sensor View</h2>
 <div class="container">
     <div class="row">
-        <span class="mediumcolumn"><button type="button" class="btn btn-success" onclick="start_calibration();">Calibrate Compass</button></span><span class="mediumcolumn" id="message"></span>
+        <span class="mediumcolumn"><button type="button" class="btn btn-success" onclick="start_calibration();">Calibrate Compass</button></span><span class="mediumcolumn blinking" id="message"></span>
     </div>
     <div>
     <table class="table">
