--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>BrickPiFlask</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/custom.css">
+    <link rel="stylesheet" href="../static/css/custom.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="static/jsonrequesthandler.js"></script>
+    <script src="/static/scripts/jsonrequesthandler.js"></script>
     {% block scripts %}{% endblock %} <!-- Container for Scripts-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
@@ -20,7 +20,7 @@
         
                 <div class="collapse navbar-collapse" id="navbarCollapse2">
                     <div class="navbar-nav">
-                        <a href="/" class="nav-item nav-link active">Home</a>
+                        <a href="/missioncontrol" class="nav-item nav-link">Mission Control</a>
                         <a href="/map" class="nav-item nav-link">Map</a>
                         <a href="/sensorview" class="nav-item nav-link">Sensor View</a>
                     </div>
