--- a/templates/map.html
+++ b/templates/map.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block scripts %}
-    <script src="static/map.js"></script>
+    <script src="/static/scripts/map.js"></script>
 {% endblock %}
 {% block content %}
     <div class="container">
