--- a/templates/sensorview.html
+++ b/templates/sensorview.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 {% block scripts %}
-<script src="static/getallstats.js"></script>
+<script src="/static/scripts/sensorview.js"></script>
 {% endblock %}
 {% block content %}
 <h2>Sensor View</h2>
 <div class="container">
     <div class="row">
-        <span class="mediumcolumn"><button type="button" class="btn btn-success" onclick="start_calibration();">Calibrate Compass</button></span><span class="mediumcolumn blinking" id="message"></span>
+        <span class="mediumcolumn"><button type="button" class="btn btn-success" onclick="start_calibration();">Calibrate Compass</button></span><span class="mediumcolumn" id="message"></span>
     </div>
     <div>
     <table class="table">
