building in some fail-safes

--- a/templates/sensorview.html
+++ b/templates/sensorview.html
@@ -8,6 +8,9 @@
     <div class="row">
         <span class="mediumcolumn"><button type="button" class="btn btn-success" onclick="start_calibration();">Calibrate Compass</button></span><span class="mediumcolumn" id="message"></span>
     </div>
+    <div class="row">
+        <span class="mediumcolumn"><button type="button" class="btn btn-success" onclick="reconfigIMU();">Reconfigure the IMU</button></span><span class="mediumcolumn" id="message"></span>
+    </div>
     <div>
     <table class="table">
         <thead><tr><th scope="col">Sensor</th><th scope="col">Value</th></tr></thead>
