Robot is now able to be disabled but Web Server (Flask) continues running

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../static/css/custom.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/static/scripts/jsonrequesthandler.js"></script>
-    {% block scripts %}{% endblock %} <!-- Container for Scripts-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
@@ -21,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse2">
                     <div class="navbar-nav">
                         <a href="/missioncontrol" class="nav-item nav-link">Mission Control</a>
-                        <a href="/map" class="nav-item nav-link">Map</a>
+                        <a href="/missionhistory" class="nav-item nav-link">Mission History</a>
                         <a href="/sensorview" class="nav-item nav-link">Sensor View</a>
                     </div>
                 </div>
@@ -38,4 +37,5 @@
         {%endfor%}
     </footer>
 </body>
+   {% block scripts %}{% endblock %} <!-- Container for Scripts-->
 </html>
