--- a/templates/missioncontrol.html
+++ b/templates/missioncontrol.html
@@ -1,7 +1,5 @@
 {% extends "layout.html" %}
-{% block scripts %}
-  <script src="/static/scripts/missioncontrol.js"></script>
-{% endblock %}
+
 {% block content %}
 <h2>Sample Web Interface using Bootstrap</h2><br/>
 <p>The buttons when clicked run a special script that can be used to send data to the server without a form (and the necessary page refresh). This helper script uses JSON (a method of sending complex data through text encoding).</p>
@@ -25,4 +23,10 @@
         </div>
       </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script src="/static/scripts/hsv.js"></script>
+<script src="/static/scripts/pen.js"></script>
+<script src="/static/scripts/missioncontrol.js"></script>
 {% endblock %}
