--- a/templates/missioncontrol.html
+++ b/templates/missioncontrol.html
@@ -15,19 +15,19 @@
             <button type="button" class="btn btn-success" onclick="JSONrequest('/forward','POST')">Forward</button>
           </div>
           <div class="col-4">
-            <button type="button" class="btn btn-success" onclick="JSONrequest('/backwards','POST')">Reverse</button>
+            <button type="button" class="btn btn-success" onclick="JSONrequest('/backward','POST')">Reverse</button>
           </div>
           <div class="col-4">
-            <button type="button" class="btn btn-success" onclick="JSONrequest('/tright','POST')">Right</button>
+            <button type="button" class="btn btn-success" onclick="JSONrequest('/t_right','POST')">Right</button>
           </div>
           <div class="col-4">
-            <button type="button" class="btn btn-success" onclick="JSONrequest('/tleft','POST')">Left</button>
+            <button type="button" class="btn btn-success" onclick="JSONrequest('/t_left','POST')">Left</button>
           </div>
           <div class="col-4">
-            <button type="button" class="btn btn-success" onclick="JSONrequest('/clawopen','POST')">Open Claw</button>
+            <button type="button" class="btn btn-success" onclick="JSONrequest('/claw_open','POST')">Open Claw</button>
           </div>
           <div class="col-4">
-            <button type="button" class="btn btn-success" onclick="JSONrequest('/clawclose','POST')">Close Claw</button>
+            <button type="button" class="btn btn-success" onclick="JSONrequest('/claw_close','POST')">Close Claw</button>
           </div>
           <div class="col-4">
             <button type="button" class="btn btn-danger" onclick="JSONrequest('/stop','POST')">Stop</button>
