--- a/templates/missionhistory.html
+++ b/templates/missionhistory.html
@@ -1,11 +1,26 @@
 {% extends "layout.html" %}
-{% block scripts %}
-    <script src="/static/scripts/missionhistory.js"></script>
-{% endblock %}
 {% block content %}
-    <div class="container">
-        <!-- area for real time chart-->
-        <canvas id="map" style="border:1px solid black; width:700px; height:700px;">
-        </canvas>
-    </div>
+
+    <table>
+    {% for row in missiontable %}
+        <tr>
+        {% for cell in row %}
+            <td>{{cell}}</td>
+        {% endfor %}
+        </tr>
+    {% endfor %}
+    </table>
+
+    <table>
+    {% for row in missionprocess %}
+        <tr>
+        {% for cell in row %}
+            <td>{{cell}}</td>
+        {% endfor %}
+        </tr>
+    {% endfor %}
+    </table>
+
+
+
 {% endblock %}
