--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,21 +10,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
+<!-- Top navigation bar, common across all pages-->
 <body style="padding:30px;font-size:16px;">
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-danger">
-                <a href="/" class="navbar-brand">BrickPiFlask</a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse2">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-        
-                <div class="collapse navbar-collapse" id="navbarCollapse2">
-                    <div class="navbar-nav">
-                        <a href="/missioncontrol" class="nav-item nav-link">Mission Control</a>
-                        <a href="/missionhistory" class="nav-item nav-link">Mission History</a>
-                        <a href="/sensorview" class="nav-item nav-link">Sensor View</a>
-                    </div>
-                </div>
-            </nav>
+
+    <nav class="navbar"><!-- navbar, navbar buttons-->
+        <div class="navbar-button-holder">
+            <a href="/" class="navbar-button">Home</a>
+            <a href="/missioncontrol" class="navbar-button">Mission Control</a>
+            <a href="/dataview" class="navbar-button">Data View</a>
+            <a href="/help" class="navbar-button">Help</a>
+        </div>
+    </nav>
+
 <br>
 
     {% block content %}{% endblock %} <!-- Container for Content -->
