--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 <div class="container">
     <form action="/" method="POST">
         Email:<br>
-        <input type="email" name="email" value="" required>
+        <input type="email" name="email" placeholder="enter your email" required>
         <br>
         Password:<br>
-        <input type="password" name="password" value="" required>
+        <input type="password" name="password" placeholder="enter your password" required>
         <br><br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Login">
         <p>If you click the "Submit" button, the form-data will be sent to the form action. Default is Email is <b>'admin@admin'</b> and Password is <b>'admin'</b>.</p>
     </form>
 </div>
